# mraster

./: CMakeLists.txt  Doxyfile  Doxyfile.cmake  IncludeMRasterLib.cmake  LICENSE.TXT  MANIFEST.txt  MRasterConfig.cmake.in  README.md  README.org  config.hpp.cmake  configure.sh  deploy_doxygen.sh  mk_tag.sh  mraster_config.hpp.cmake
data/: baboon.tiff  mandelbrot_curve_10.txt  mr.tiff
data/utest/: ut-adjoin-c.mrw  ut-adjoin-c.tiff  ut-adjoin-d.mrw  ut-adjoin-d.tiff  ut-adjoin-e.mrw  ut-adjoin-e.tiff  ut-adjoin-f.mrw  ut-adjoin-f.tiff  ut-btriangle-a.mrw  ut-circles-a.mrw  ut-circles-a.tiff  ut-circles-b.mrw  ut-circles-b.tiff  ut-circles-c.mrw  ut-circles-c.tiff  ut-circles-d.mrw  ut-circles-d.tiff  ut-circles-e.mrw  ut-circles-e.tiff  ut-circles-f.mrw  ut-circles-f.tiff  ut-draw_primatives_flt.mrw  ut-draw_primatives_flt.tiff  ut-draw_primatives_int.mrw  ut-draw_primatives_int.tiff  ut-geom_tfrm-a.mrw  ut-geom_tfrm-b.mrw  ut-geom_tfrm-b.tiff  ut-geom_tfrm-c.mrw  ut-geom_tfrm-c.tiff  ut-geom_tfrm-d.mrw  ut-geom_tfrm-d.tiff  ut-geom_tfrm-e.mrw  ut-geom_tfrm-e.tiff  ut-geom_tfrm-g.mrw  ut-glyph_axis-a.mrw  ut-glyph_axis-a.tiff  ut-lines_clip-b.mrw  ut-lines_clip-b.tiff  ut-lines_clip-d.mrw  (+75 more)
docs/: ColorSchemes.html  ColorSchemes.org  QuickStart.html  QuickStart.org  changelog.html  changelog.org  index.html  index.org  roadmap.html  roadmap.org  test_coverage.html  test_coverage.org
examples/: 16bit_data_image_filter.cpp  3da_frac_langford.cpp  3da_frac_lorenz.cpp  BurningShip.cpp  LICENSE.TXT  LevyCurve.cpp  README.org  apollony.cpp  apomorph.cpp  attracting_torus_shadow.cpp  attracting_torus_shadowM.cpp  barrymartin.cpp  bifurcationDiagram.cpp  bifurcation_diagram.cpp  biomorph1.cpp  biomorph2.cpp  biomorphMorph.cpp  bmark.cpp  brownianDiffusion.cpp  brusselator.cpp  butterfly.cpp  chaos_game.cpp  circles.cpp  collatz.cpp  colorAll.cpp  colorCubeGraphRamps.cpp  colorGeneralRamps.cpp  colorIndexedPallets.cpp  colorInterplHLSvsRGB.cpp  colorRainbows.cpp  colorWebRectangle.cpp  colorWebTriangle.cpp  color_all.cpp  color_interp_hls_vs_rgb.cpp  color_interp_hsl_vs_rgb.cpp  color_lut_cubehelix.cpp  color_lut_docs.cpp  color_lut_indexed.cpp  color_lut_indexedC.cpp  color_lut_poly.cpp  (+168 more)
ftests/: test_color_con.cpp  test_interp_scale.cpp
lib/: LICENSE.TXT  MRcolor.hpp  MRcolorTpl.hpp  MRpoint2d.hpp  color.hpp  colorData.cpp  colorData.hpp  colorTpl.hpp  hello.cpp  hersheyFont.hpp  hersheyFontData.cpp  hersheyFontData.hpp  mainPage.cpp  makefile  mapclamp.hpp  mjrmath.hpp  mraster_config_no_cmake_template.hpp  point2d.hpp  ramCanvas.hpp  ramCanvasPixelFilters.hpp  ramCanvasTpl.hpp  ramConfig.hpp
scripts/: README.org  any2mrw.sh  mrw2any.sh
utests/: all_gtests.cpp  bool_isBlack.cpp  bool_isClose.cpp  bool_isEqual.cpp  c_bool_isBlack.cpp  c_bool_isClose.cpp  c_bool_isEqual.cpp  c_comp_MinMax.cpp  c_comp_bestChan.cpp  c_comp_distDeltaE1976.cpp  c_comp_distX.cpp  c_comp_dotProd.cpp  c_comp_linearInterpolate.cpp  c_comp_luminance.cpp  c_comp_rgb2colorSpace.cpp  c_comp_wMean.cpp  c_constructor.cpp  c_int128_test.cpp  c_set_chan_argb.cpp  c_set_chan_byte.cpp  c_set_chan_const.cpp  c_set_chan_dbl.cpp  c_set_chan_gen.cpp  c_set_chan_hex.cpp  c_set_cs_csBin.cpp  c_set_cs_csCBSpectral.cpp  c_set_cs_csCColdeRainbow.cpp  c_set_cs_csCubeHelix.cpp  c_set_cs_csFPcircular12.cpp  c_set_cs_csHSLhX.cpp  c_set_cs_csPLY.cpp  c_set_rgb_ColorSpace.cpp  c_set_rgb_constant.cpp  c_set_rgb_tga.cpp  c_set_rgb_unitHSx.cpp  c_set_rgb_wavelengthCM.cpp  c_set_rgb_wavelengthLA.cpp  c_set_rgba_pack.cpp  c_tfrm_GryLevScl.cpp  c_tfrm_PowPow.cpp  (+58 more)
